# MRST

./: .gitattributes  .gitignore  .zenodo.json  ADFNEmod.md  AUTHORS  AddMRST.m  BUGS  CITATION.cff  CIcalculator2D.m  CONTENT.txt  COPYRIGHT.txt  Content.txt  Contents.m  Contents.txt  FAQ  FlowNMPFA.m  FlowNTPFA.m  GPSNet.m  GridBlock.m  Grid_Incline.m  IMSIMmodel.m  L2_Norm.m  LICENSE  LICENSE.txt  NFVM.m  NF_Top_Bottom_Explicit_EOR.m  Network.m  NetworkModel.m  OnePhaseIncompMPFA.m  OnePhaseUpscaler.m  PicardNTPFA.m  README  README.m  README.md  README.org  README.txt  Readme.txt  Simulate_BFGS.m  Simulate_BFGS_perturb.m  TransMPFAO.m  (+119 more)
2.5D/: compressible_2ph_fs.m  twophase_fs.m
3D/: GlobTri_BedModel.mat  bedModelFracMS.m  bedModelSimpleCoarsening.m  findRectangularFractures.m  fracMatrixConnections.m  frac_frac_nnc_extruded.m  generatePointsOnPlane.m  globalTriangulation.m  gridFractureDistmesh.m  main_singlephase_fs.m  main_twophase.m  main_twophase_fs.m  makeLayers.m  makeNNCgrid.m  olavFractureCoarsen.m  planes_input.m  preProcessingFractures.m  rotatePlane.m  test_fracgridding.m  test_markcells.m
Polynomial/: Polynomial.m
SPE201243PA/: CMG_timestep2.csv  Fig15_17_18_validationCase2.m  Fig16_validationCase2_structured.m  MulistagePlanarNonPlanarHF.m  StructuredGridFractureonFace.m  explicitStencil3Fracs.m
UnitTests/: Fig10to13TeneCaseLowKf.m  Fig10to13TeneCasesHighKf.m  IntegratedTests.m  testDiffusion.m  testEDFMNFR.m  testGangi.m  testPEDFM_EDFM_explicit.m  testSorption.m  testpEDFMNFR.m  ws1diff.mat  ws1gangi.mat  ws2diff.mat  ws2gangi.mat  ws2sorb.mat  wsEDFMNFR.mat  ws_Fig15_pEDFMPaper.mat  wspEDFMNFR.mat
ad/: ComponentPhaseVelocityDG.m  ComponentPhaseVelocityFractionalFlowDG.m  ComponentTotalVelocityDG.m  Contents.m  FixedTotalFluxDG.m  FixedTotalVelocityDG.m  FlowStateBuilderDG.m  GravityPermeabilityGradientDG.m  GravityPotentialDifferenceDG.m  MultipliedPoreVolumeDG.m  PrimaryVariableDG.m  SpatialDiscretization.m  SpatialVector.m  TransmissibilityDG.m  TwoPhaseOilWaterModel_BCP.m  getFluxAndPropsOil_BO_BCP.m
ad-blackoil/: README.txt
ad-core/: README.txt
ad-eor/: README.txt
ad-fi/: README  README.txt  cprAdjoint.m  cprBlackOilExplicitWells.m  cprGeneric.m  eqsfiBlackOil.m  eqsfiOW.m  eqsfiOWExplicitWells.m  eqsfiOWPolymerExplicitWells.m  eqsfiOWT.m  eqsfiVO.m  handleBC.m  initADISystem.m  initStateADI.m  runAdjointADI.m  runScheduleADI.m  solvefiADI.m  stepBlackOil.m  stepOW.m  stepOWPolymer.m  stepOWT.m  stepVO.m  updateStateBO.m  updateStateVO.m
ad-props/: Contents.m  README.txt  blackOilLinearTemp.m  brineProps.m  co2Props.m  co2Props_simple.m  fluid2BlackOil.m  fluid2BlackOilTemp.m  h2oProps.m  h2oProps_simple.m  imposeRelpermScaling.m  initSimpleADIFluid.m  linearFluid.m  makePvtTable.m  mystartup.m  pvt2Linear.m  pvt2Table.m
ad-refactor/: computeGradientAdjointAD.m  computeGradientPerturbationAD.m  runScheduleRefactor.m  simulateAdjointAD.m  simulateScheduleAD.m
ad-unittest/: MRSTExampleTests.m  adUnitTests.m  getExampleIntegrationTestSuiteMRST.m  getIntegrationTestSuiteMRST.m  getUnitTestSuiteMRST.m  runAD_unittests.m  runTestsAD.m
ad_models/: DualPorosityReservoirModel.m  ThreePhaseBlackOilModelDP.m  TwoPhaseOilWaterModelDP.m  TwoPhaseOilWaterModelDPDP.m  myTwoPhaseOilWaterModelDP.m
adjoint/: Contents.m  README  addAdjointWellFields.m  adjointFluidFields.m  assembleWellSystem.m  computeAdjointRHS.m  computeGradient.m  computeNumericalGradient.m  controls2RHS.m  controls2Wells.m  dispControls.m  dispSchedule.m  generateUpstreamTransportMatrix.m  initControls.m  initSchedule.m  lineSearchAgr.m  optimizeObjective.m  projectGradient.m  runAdjoint.m  runSchedule.m  solveAdjointPressureSystem.m  solveAdjointTransportSystem.m  solveIncompFlowLocal.m  updateSchedule.m  updateWells.m
agglom/: Contents.m  INFO.txt  README  applySuccessivePart.m  mergeBlocks.m  mergeBlocks2.m  mergeBlocks3.m  mergeBlocks4.m  refineBlocks.m  refineGreedy.m  refineGreedy2.m  refineGreedy3.m  refineGreedy4.m  refineRecursiveCart.m  refineSuccessivePart.m  refineUniform.m  refineUniformShape.m  segmentIndicator.m
assembly/: assembleBiot.m  assembleCouplingTerms.m  assembleMPFA.m  assembleMPSA.m  assembleMPSA2.m  blockAssembleBiot.m  blockAssembleMPFA.m  blockAssembleMPSA.m  blockAssembleMPSA2.m  (+26 more)
co2lab-legacy/solvers/VEmex/mexInterface/: CMakeLists.txt
co2lab-legacy/solvers/VEmex/mexInterface/src/: matlab.def
co2lab/co2lab-legacy/solvers/VEmex/: CMakeLists.txt  README
co2lab/ve/VEmex/VESimulator/: CMakeLists.txt
co2lab/ve/VEmex/VESimulator/include/: Grid2D.h  configure.h.in
(+12084 files in other folders)
